--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                         <hr class="star-primary">
                         <img src="img/portfolio/concert5.jpg" class="img-responsive img-centered" alt="">
                         <p>Opis koncertu Opis koncertu Opis koncertu Opis koncertu Opis koncertu Opis koncertu
-                            Opis koncertu Opis koncertu Opis koncertu Opis koncertu Opis koncertu Opis koncertu
+                            Opis koncertu Opis koncertu Opis koncertu Opis koncertu Opis koncertu
                             Opis koncertu Opis koncertu </p>
                         <ul class="list-inline item-details">
                             <li>Kliient:
