--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-lg-12" style="width:100%; padding:0; position:relative">
                 <img class="img-responsive" src="img/temp.jpg" alt="" style="width:100%; position:relative">
-                <div class="col-log-6"><img class="img-respnosive" src="img/szczwany.png" alt="" style="width:30%;
+                <div class="col-log-6"><img class="img-respnosive" src="img/szczwany2.png" alt="" style="width:30%;
                 position:absolute; top:13%; left:15%"></div>
 
                 <div class="intro-text" style="position:absolute; bottom:50%; left:5%">
