--- a/index.html
+++ b/index.html
@@ -203,32 +203,32 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Imię</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required
-                                   data-validation-required-message="Please enter your name.">
+                            <input type="text" class="form-control" placeholder="Imię" id="name" required
+                                   data-validation-required-message="Podaj swoje imię.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Adres e-mail</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required
-                                   data-validation-required-message="Please enter your email address.">
+                            <input type="email" class="form-control" placeholder="Adres e-mail" id="email" required
+                                   data-validation-required-message="Podaj swój adres e-mail.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Numer telefonu</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required
-                                   data-validation-required-message="Please enter your phone number.">
+                            <input type="tel" class="form-control" placeholder="Numer telefonu" id="phone" required
+                                   data-validation-required-message="Podaj swój numer telefonu.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Wiadomość</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required
-                                      data-validation-required-message="Please enter a message."></textarea>
+                            <textarea rows="5" class="form-control" placeholder="Wiadomość" id="message" required
+                                      data-validation-required-message="Wpisz swoją wiadomość"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
